make.out
rm -f src/defender.o src/game.o src/bullet.o src/burn.o src/joystick.o src/particle.o src/powerup.o src/ship.o src/speaker.o src/time.o src/vga.o src/vga_font.o defender.exe defender.map
i586-pc-msdosdjgpp-gcc -Wall -O2 -g -I/usr/local/djgpp/i586-pc-msdosdjgpp/sys-include -Iinclude -fcommon -Wno-duplicate-decl-specifier -c src/defender.c -o src/defender.o
i586-pc-msdosdjgpp-gcc -Wall -O2 -g -I/usr/local/djgpp/i586-pc-msdosdjgpp/sys-include -Iinclude -fcommon -Wno-duplicate-decl-specifier -c src/game.c -o src/game.o
i586-pc-msdosdjgpp-gcc -Wall -O2 -g -I/usr/local/djgpp/i586-pc-msdosdjgpp/sys-include -Iinclude -fcommon -Wno-duplicate-decl-specifier -c src/bullet.c -o src/bullet.o
src/bullet.c:14:6: error: conflicting types for 'bullet_new'; have 'void(struct bullet *, int,  int,  enum bullet_direction)'
   14 | void bullet_new(struct bullet *b, int32_t x, int32_t y, enum bullet_direction dir)
      |      ^~~~~~~~~~
In file included from src/bullet.c:3:
include/bullet.h:21:6: note: previous declaration of 'bullet_new' with type 'void(struct bullet *, int32_t,  int32_t,  enum bullet_direction)' {aka 'void(struct bullet *, long int,  long int,  enum bullet_direction)'}
   21 | void bullet_new(struct bullet *b, int32_t x, int32_t y, enum bullet_direction dir);
      |      ^~~~~~~~~~
src/bullet.c: In function 'bullet_step':
src/bullet.c:38:20: warning: implicit declaration of function 'rand_number' [-Wimplicit-function-declaration]
   38 |                 if(rand_number() > 64000)
      |                    ^~~~~~~~~~~
src/bullet.c:39:25: warning: implicit declaration of function 'powerup_random'; did you mean 'powerup_drop'? [-Wimplicit-function-declaration]
   39 |                         powerup_random(id);
      |                         ^~~~~~~~~~~~~~
      |                         powerup_drop
src/bullet.c: In function 'bullet_draw':
src/bullet.c:48:20: error: incompatible type for argument 1 of 'vga_pixel'
   48 |         vga_pixel(b->x, b->y, 15);
      |                   ~^~~
      |                    |
      |                    int32_t {aka long int}
In file included from include/particle.h:6,
                 from src/bullet.c:4:
include/vga.h:21:29: note: expected 'struct point' but argument is of type 'int32_t' {aka 'long int'}
   21 | void vga_pixel(struct point p, uint8_t color);
      |                ~~~~~~~~~~~~~^
src/bullet.c:48:9: error: too many arguments to function 'vga_pixel'
   48 |         vga_pixel(b->x, b->y, 15);
      |         ^~~~~~~~~
include/vga.h:21:6: note: declared here
   21 | void vga_pixel(struct point p, uint8_t color);
      |      ^~~~~~~~~
make: *** [Makefile:20: src/bullet.o] Error 1
